fix/z-index

--- a/src/pages/Mission.scss
+++ b/src/pages/Mission.scss
@@ -1,6 +1,6 @@
 .container {
   height: 100vh;
   position: relative;
-  z-index: 25;
+  z-index: 20;
   background-color: white;
 }
